# server/src/db/db-schema.ts
@@ -1,5 +1,13 @@
 import { InferModel } from 'drizzle-orm';
-import { pgTable, text, serial, date, integer } from 'drizzle-orm/pg-core';
+import {
+   pgTable,
+   text,
+   serial,
+   date,
+   integer,
+   timestamp,
+} from 'drizzle-orm/pg-core';
+import { WEEKDAYS } from '../utils';
 
 const usersTable = pgTable('users', {
    name: text('name'),
@@ -8,23 +16,12 @@ const usersTable = pgTable('users', {
    id: serial('id').primaryKey().notNull(),
 });
 
-type User = InferModel<typeof usersTable>;
-type NewUser = InferModel<typeof usersTable, 'insert'>;
-
 const habitsTable = pgTable('habits', {
    id: serial('id').primaryKey().notNull(),
    name: text('name').notNull(),
    description: text('description'),
    repeatDays: text('repeat_days', {
-      enum: [
-         'monday',
-         'tuesday',
-         'wednesday',
-         'thursday',
-         'friday',
-         'saturday',
-         'sunday',
-      ],
+      enum: WEEKDAYS,
    })
       .array()
       .notNull(),
@@ -37,7 +34,36 @@ const habitsTable = pgTable('habits', {
    trackingStartDate: date('tracking_start_date').notNull(),
 });
 
+const completionsTable = pgTable('completions', {
+   id: serial('id').primaryKey(),
+   habitId: integer('habit_id')
+      .notNull()
+      .references(() => habitsTable.id),
+   // isComplete: boolean('is_complete'),
+   completionStatus: text('completion_status', {
+      enum: ['complete', 'incomplete', 'pending'],
+   }).notNull(),
+   completionStatusTimestamp: timestamp('completion_status_timestamp', {
+      withTimezone: true,
+   }),
+   scheduledDate: date('scheduled_date').notNull(),
+});
+
+type User = InferModel<typeof usersTable>;
+type NewUser = InferModel<typeof usersTable, 'insert'>;
 type Habit = InferModel<typeof habitsTable>;
 type InsertableHabit = InferModel<typeof habitsTable, 'insert'>;
+type Completion = InferModel<typeof completionsTable>;
+type InsertableCompletion = InferModel<typeof completionsTable, 'insert'>;
 
-export { Habit, InsertableHabit, User, NewUser, habitsTable, usersTable };
+export {
+   Habit,
+   InsertableHabit,
+   User,
+   NewUser,
+   Completion,
+   InsertableCompletion,
+   habitsTable,
+   usersTable,
+   completionsTable,
+};
