# server/src/utils.ts
@@ -1,0 +1,9 @@
+export const WEEKDAYS = [
+   'Sunday',
+   'Monday',
+   'Tuesday',
+   'Wednesday',
+   'Thursday',
+   'Friday',
+   'Saturday',
+] as const;
